filter out hidden courses, show session duration on course level
